--- a/index.html
+++ b/index.html
@@ -7,29 +7,42 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Profile card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+ 
 </head>
 <body>
-  Victor Crest
-  26
-  London
 
-  80K
-  Followers
+  <section class="card">
 
-  803K
-  Likes
+    <img class="card__image" src="/images/image-victor.jpg" alt="" srcset="">
 
-  1.4K
-  Photos
-  <div class="attribution">
+    <div class="card__info-user">
+      <p class="card__text"><span class="bold">Victor Crest</span> 26</p>
+      <p class="card__text">London</p>
+    </div>
+
+    <div class="card__social">
+      <div class="card__text">
+        <p class="bold"></p>80K</p>
+        <p class="bold">Followers</p>
+      </div>
+
+      <div class="card__text">
+        <p class="bold"></p>803K</p>
+        <p class="bold">Likes</p>
+      </div>
+
+      <div class="card__text">
+        <p class="bold"></p>1.4K</p>
+        <p class="bold">Photos</p>
+      </div>
+    </div>
+
+  </section> 
+    
+  <div>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Javier M.P.</a>.
   </div>
+  
 </body>
 </html>
